# OOP_1

./: CMakeLists.txt  Catalog.cpp  Catalog.h  Cumparator.cpp  Cumparator.h  Erori.h  FileLog.h  Inmatriculare.cpp  Inmatriculare.h  Masina.cpp  Masina.h  MasinaBuilder.h  MasinaElectrica.cpp  MasinaElectrica.h  PremiumUser.cpp  PremiumUser.h  README.md  User.cpp  User.h  UtilityClass.cpp  UtilityClass.h  Vehicul.cpp  Vehicul.h  log.txt  main.cpp
